k8s/Booking-Service.yaml
# Booking-Service.yaml 매니페스트
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service                                          
  labels:
    app: booking-service                        # 서비스 마다 라벨표기
spec:
  replicas: 3
  selector:
    matchLabels:
      app: booking-service                     # 
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      serviceAccountName: sqs-access-sa        # Booking 예약 확정 이메일 필요 서비스계정
      containers:
      - name: booking-service
        image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:booking
        ports:
        - containerPort: 5002
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "256Mi"
          limits:
            cpu: "500m"
            memory: "512Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: NodePort
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: booking-service
