k8s/Flight-svc.yaml
# flight-Service.yaml 매니페스트
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service
  labels:
    app: flight-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
      - name: flight-service
        image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:flight
        ports:
        - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  type: NodePort
  ports:
  - port: 5001
    targetPort: 5001
  selector:
    app: flight-service
