k8s/booking-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service-deployment
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:booking
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: LoadBalancer
  selector:
    app: booking-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5002
