k8s/booking-svc.yaml
# Booking-Service.yaml 매니페스트
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      serviceAccountName: sqs-access-sa
      containers:
      - name: booking-service
        image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:bookingtest
        imagePullPolicy: Always
        ports:
        - containerPort: 5002
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
spec:
  type: NodePort
  ports:
  - port: 5002
    targetPort: 5002
  selector:
    app: booking-service
