k8s/flight-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flight-service-deployment
  labels:
    app: flight-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: flight-service
  template:
    metadata:
      labels:
        app: flight-service
    spec:
      containers:
        - name: flight-service
          image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:flight
          ports:
            - containerPort: 5001
---
apiVersion: v1
kind: Service
metadata:
  name: flight-service
spec:
  type: ClusterIP
  selector:
    app: flight-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5001
