k8s/user-svc.yaml
# User-service.yaml 매니페스트
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
  labels:
    app: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:
      containers:
      - name: user-service
        image: 241533155281.dkr.ecr.ap-northeast-2.amazonaws.com/jaws/backend:user
        ports:
        - containerPort: 5000
---
apiVersion: v1
kind: Service
metadata:
  name: user-service
spec:
  type: NodePort
  ports:
  - port: 5000
    targetPort: 5000
  selector:
    app: user-service
